# assistant

./: .gitignore  Procfile  comments1.txt  pyproject.toml  requirements.txt
data/crawlers_json/: certifications.json  contact.json  flagship-program.json  flagship-program_courses.json  flagship-program_courses_AI-101.json  flagship-program_courses_AI-201.json  flagship-program_courses_AI-301.json  flagship-program_courses_AI-451.json  flagship-program_courses_AI-461.json  flagship-program_courses_AI-500.json  flagship-program_courses_AI-501.json  flagship-program_courses_AI-502.json  flagship-program_courses_AI-651.json  home.json  login.json  register.json  scraped_content_summary.json  team.json  terms-and-conditions.json
data/rag_ready/: rag_ready_data.json
scripts/: basic_crawl.py  check_qdrant.py  deep_crawl.py  deep_crawl_to_json.py  generic_rag_preprocessor.py  sample.py  test.py
src/assistant/: main.py
