[project]
name = "assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad-javed440", email = "meherjaved440@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.2",
    "fastapi[standard]>=0.115.14",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0,<0.36.0",
]


[project.scripts]
assistant = "src.assistant.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
